# bench-agent

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/bench_agent/: __init__.py  cli.py  evaluator.py  leaderboard.py  models.py  runner.py  scorer.py  tasks.py
tests/: test_scorer.py  test_tasks.py
